[tool.poetry]
name = "bark-with-voice-clone"
version = "0.1.0"
description = ""
authors = ["LUJ0618 <uijong2201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.0"
suno-bark = {git = "https://github.com/suno-ai/bark.git"}
fairseq = "0.12.2"
audiolm-pytorch = "2.0.7"
accelerate = "0.31.0"
antlr4-python3-runtime = "4.8"
beartype = "0.18.5"
bitarray = "2.9.2"
boto3 = "1.35.3"
botocore = "1.35.3"
certifi = "2024.7.4"
cffi = "1.17.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
cython = "3.0.11"
docker-pycreds = "0.4.0"
einops = "0.8.0"
einx = "0.3.0"
ema-pytorch = "0.6.0"
encodec = "0.1.1"
filelock = "3.15.4"
frozendict = "2.4.4"
fsspec = "2024.6.1"
funcy = "2.0"
gateloop-transformer = "0.2.5"
gitdb = "4.0.11"
gitpython = "3.1.43"
huggingface-hub = "0.24.6"
hydra-core = "1.0.7"
idna = "3.7"
jinja2 = "3.1.4"
jmespath = "1.0.1"
joblib = "1.4.2"
local-attention = "1.9.14"
lxml = "5.3.0"
markupsafe = "2.1.5"
mpmath = "1.3.0"
networkx = "3.3"
numpy = "2.1.0"
nvidia-cublas-cu12 = "12.1.3.1"
nvidia-cuda-cupti-cu12 = "12.1.105"
nvidia-cuda-nvrtc-cu12 = "12.1.105"
nvidia-cuda-runtime-cu12 = "12.1.105"
nvidia-cudnn-cu12 = "9.1.0.70"
nvidia-cufft-cu12 = "11.0.2.54"
nvidia-curand-cu12 = "10.3.2.106"
nvidia-cusolver-cu12 = "11.4.5.107"
nvidia-cusparse-cu12 = "12.1.0.106"
nvidia-nccl-cu12 = "2.20.5"
nvidia-nvjitlink-cu12 = "12.6.20"
nvidia-nvtx-cu12 = "12.1.105"
omegaconf = "2.0.6"
packaging = "24.1"
platformdirs = "4.2.2"
portalocker = "2.10.1"
protobuf = "5.27.3"
psutil = "6.0.0"
pycparser = "2.22"
python-dateutil = "2.9.0.post0"
pytorch-warmup = "0.1.1"
pyyaml = "6.0.2"
regex = "2024.7.24"
requests = "2.32.3"
rotary-embedding-torch = "0.6.5"
s3transfer = "0.10.2"
sacrebleu = "2.4.3"
safetensors = "0.4.4"
scikit-learn = "1.5.1"
scipy = "1.14.1"
sentencepiece = "0.2.0"
sentry-sdk = "2.13.0"
setproctitle = "1.3.3"
setuptools = "73.0.1"
six = "1.16.0"
smmap = "5.0.1"
sympy = "1.13.2"
tabulate = "0.9.0"
threadpoolctl = "3.5.0"
tokenizers = "0.19.1"
torch = "2.4.0"
torchaudio = "2.4.0"
tqdm = "4.66.5"
transformers = "4.44.1"
triton = "3.0.0"
typing-extensions = "4.12.2"
urllib3 = "2.2.2"
vector-quantize-pytorch = "1.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
